[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Sameer-ahmadd",email = "samimughal7786@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "optuna (>=4.2.0,<5.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "twofish (>=0.3.0,<0.4.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "config (>=0.5.1,<0.6.0)",
    "pytz (>=2024.2,<2025.0)",
    "comet-ml (>=3.48.1,<4.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "retry (>=0.9.2,<0.10.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "confluent-kafka (>=2.8.0,<3.0.0)",
    "hopsworks (==4.1.0)",
    "pandas (==1.5.0)",
    "numpy (==1.24.0)",
    
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
